Сікора перший коміт

--- a/kvartirnuj-pereezd.html
+++ b/kvartirnuj-pereezd.html
@@ -303,6 +303,7 @@
 							<button type="submit" class="default small-size send submitPhoneBtn-calc" id="submitPhoneBtn" data-type="Кнопка с калькулятора">Заказать</button>
 							<!-- <div class="form-sent hidden">Заявка отправлена</div> -->
 							<div class="form-sent-error hidden">Не правильно введен номер</div>
+							<div class="form-sent-error-emptyInputs hidden">Не достатньо інформації</div>
 						</div>
 					</div>
 				</div>
